# task_basealt

./: README.md  run
src/: CMakeLists.txt  data_getter.cpp  data_getter.hpp  main.cpp
